--- a/AccounterApplication.Web/Views/Shared/_Layout.cshtml
+++ b/AccounterApplication.Web/Views/Shared/_Layout.cshtml
@@ -1,18 +1,27 @@
-﻿<!DOCTYPE html>
+﻿@using AccounterApplication.Common.GlobalConstants
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>@ViewData["Title"] - Accounter</title>
+    <title>@ViewData["Title"] - @SystemConstants.SystemName</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="~/css/all.min.css" type="text/css">
-    <link rel="stylesheet" href="~/css/sb-admin-2.min.css" type="text/css">
-    <link rel="stylesheet" href="~/css/site.css" type="text/css" />
+    <environment names="Development">
+        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" type="text/css" />
+        <link rel="stylesheet" href="~/css/all.css" type="text/css">
+        <link rel="stylesheet" href="~/css/sb-admin-2.css" type="text/css">
+        <link rel="stylesheet" href="~/css/site.css" type="text/css" />
+    </environment>
+    @*<environment names="Staging,Production">
+        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
+        <link rel="stylesheet" href="~/css/all.min.css" type="text/css">
+        <link rel="stylesheet" href="~/css/sb-admin-2.min.css" type="text/css">
+        <link rel="stylesheet" href="~/css/site.css" type="text/css" />
+    </environment>*@
 
 </head>
 <body>
@@ -23,7 +32,7 @@
                 <div class="sidebar-brand-icon">
                     <img src="~/images/logo2.png">
                 </div>
-                <div class="sidebar-brand-text mx-3">Accounter</div>
+                <div class="sidebar-brand-text mx-3">@SystemConstants.SystemName</div>
             </a>
 
             <hr class="sidebar-divider my-0">
@@ -71,6 +80,7 @@
                     </nav>
                 </header>
                 <div class="container">
+                    <partial name="_CookieConsentPartial" />
                     <main role="main" class="p-0">
                         @RenderBody()
                     </main>
@@ -79,7 +89,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; 2020 - Accounter</span>
+                        <span>Copyright &copy; 2020 - @SystemConstants.SystemName</span>
                         <a class="icons8" href="https://icons8.com/icon/3S2oxo1xZqhQ/transaction">Transaction icon by Icons8</a>
                         <a class="icons8" href="https://icons8.com/icon/ARWy_JjgohtA/customer">Customer icon by Icons8</a>
                     </div>
@@ -87,14 +97,23 @@
             </footer>
         </div>
     </div>
-
-    <script src="~/lib/jquery/dist/jquery.min.js" type="text/javascript"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" type="text/javascript"></script>
-    <script src="~/js/site.js" asp-append-version="true" type="text/javascript"></script>
-    <script src="~/js/jquery/jquery.min.js" type="text/javascript"></script>
-    <script src="~/js/jquery/jquery.easing.min.js" type="text/javascript"></script>
-    <script src="~/js/sb-admin-2.min.js" type="text/javascript"></script>
-
+    <environment names="Development">
+        <script src="~/lib/jquery/dist/jquery.js" type="text/javascript" asp-append-version="true"></script>
+        <script src="~/js/jquery/jquery.min.js" type="text/javascript" asp-append-version="true"></script>
+        <script src="~/js/jquery/jquery.easing.js" type="text/javascript" asp-append-version="true"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js" type="text/javascript" asp-append-version="true"></script>
+        <script src="~/js/sb-admin-2.js" type="text/javascript" asp-append-version="true"></script>
+        <script src="~/js/site.js" type="text/javascript" asp-append-version="true"></script>
+    </environment>
+    @*<environment names="Staging,Production">
+        <script src="~/lib/jquery/dist/jquery.min.js" type="text/javascript" asp-append-version="true"></script>
+        <script src="~/js/jquery/jquery.min.js" type="text/javascript" asp-append-version="true"></script>
+        <script src="~/js/jquery/jquery.easing.min.js" type="text/javascript" asp-append-version="true"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" type="text/javascript" asp-append-version="true"></script>
+        <script src="~/js/sb-admin-2.min.js" type="text/javascript" asp-append-version="true"></script>
+        <script src="~/js/site.js" type="text/javascript" asp-append-version="true"></script>
+    </environment>*@
+    
     @RenderSection("Scripts", required: false)
 </body>
 </html>
