--- a/AccounterApplication.Web/Views/Expenses/AddExpense.cshtml
+++ b/AccounterApplication.Web/Views/Expenses/AddExpense.cshtml
@@ -1,7 +1,37 @@
-﻿
+﻿@using AccounterApplication.Web.Controllers
+@using AccounterApplication.Web.ViewModels.Expenses
+
+@model ExpenseInputModel
 @{
     ViewData["Title"] = "AddExpense";
 }
 
-<h1>AddExpense</h1>
+<h1>Add Expense</h1>
 
+<div class="col-md-4">
+    <form asp-controller="@nameof(ExpensesController).Replace(nameof(Controller), string.Empty)" asp-action="@nameof(ExpensesController.AddExpense)" class="form" method="post">
+        <div class="form-group">
+            <label asp-for="Description"></label>
+            <input asp-for="Description" class="form-control" />
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="ExpenseAmount"></label>
+            <input asp-for="ExpenseAmount" class="form-control" />
+            <span asp-validation-for="ExpenseAmount" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="DateOfExpense"></label>
+            <input asp-for="DateOfExpense" class="form-control" />
+            <span asp-validation-for="DateOfExpense" class="text-danger"></span>
+        </div>
+        <div class="modal-footer">
+            <input type="submit" value="Create" class="btn btn-primary" />
+        </div>
+    </form>
+
+</div>
+
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+}
