--- a/AccounterApplication.Web/Views/Expenses/AddExpense.cshtml
+++ b/AccounterApplication.Web/Views/Expenses/AddExpense.cshtml
@@ -8,7 +8,7 @@
 
 <h1>Add Expense</h1>
 
-<div class="col-md-4">
+<div class="col-md-6">
     <form asp-controller="@nameof(ExpensesController).Replace(nameof(Controller), string.Empty)" asp-action="@nameof(ExpensesController.AddExpense)" class="form" method="post">
         <div class="form-group">
             <label asp-for="Description"></label>
@@ -26,7 +26,7 @@
             <span asp-validation-for="DateOfExpense" class="text-danger"></span>
         </div>
         <div class="modal-footer">
-            <input type="submit" value="Create" class="btn btn-primary" />
+            <input type="submit" value="Add" class="btn btn-primary" />
         </div>
     </form>
 
