--- a/AccounterApplication.Web/Views/Incomes/AddMonthlyIncome.cshtml
+++ b/AccounterApplication.Web/Views/Incomes/AddMonthlyIncome.cshtml
@@ -1,7 +1,32 @@
-﻿
+﻿@using AccounterApplication.Web.Controllers
+@using AccounterApplication.Web.ViewModels.MonthlyIncomes
+
+@model MonthlyIncomeInputModel
+
 @{
-    ViewData["Title"] = "AddMonthlyIncome";
+    ViewData["Title"] = "Add Monthly Income";
 }
 
-<h1>AddMonthlyIncome</h1>
+<h1>Add Monthly Income</h1>
 
+<div class="col-md-6">
+    <form asp-controller="@nameof(IncomesController).Replace(nameof(Controller), string.Empty)" asp-action="@(nameof(IncomesController.AddMonthlyIncome))" class="form" method="post">
+        <div class="form-group">
+            <label asp-for="Amount"></label>
+            <input asp-for="Amount" class="form-control" />
+            <span asp-validation-for="Amount" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="IncomePeriod"></label>
+            <input asp-for="IncomePeriod" class="form-control" />
+            <span asp-validation-for="IncomePeriod" class="text-danger"></span>
+        </div>
+        <div class="modal-footer">
+            <input type="submit" value="Add" class="btn btn-primary" />
+        </div>
+    </form>
+</div>
+
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+}
